--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,9 +1,18 @@
+<app-player></app-player>
 <div class="field">
     <div class="card-stack">
 
         <img *ngFor="let c of [0,1,2,3,4]; let i = index;" [ngStyle]="{'right.px': i*5}"
             src="../../assets/img/card-img/card_cover.png">
-        <img (click)="takeCard()" [class.pick-card]="pickCardAnimation" src="../../assets/img/card-img/card_cover.png"
-            style="right: 25px">
+
+        <img *ngFor="let card of game.playedCard" src="../../assets/img/card-img/{{ card }}.png"
+            class="played-card-stack">
+        
+        <img (click)="takeCard()" [class.pick-card]="pickCardAnimation" class="pick-card"
+            src="../../assets/img/card-img/{{ currentCard }}.png" style="right: 25px">
+        <img (click)="takeCard()" class="top-card" src="../../assets/img/card-img/card_cover.png" style="right: 25px">
+
+
+
     </div>
 </div>
