added player div

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -57,3 +57,8 @@
         transform: scale(1) translateX(180px) translateY(-250px) rotate(10deg);
     }
 }
+
+.player-position{
+    position: absolute;
+    right:0;
+}
