--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<app-player></app-player>
+<app-player class="player-position" style="top:200px"></app-player>
 <div class="field">
     <div class="card-stack">
 
