--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,3 +1,4 @@
 <div class="player">
-    <img src="../../assets/img/card-img/card_cover.png">
+    <img src="../../assets/img/avatar1.png">
+    <span>Name</span>
 </div>
