--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,18 +1,24 @@
-<app-player class="player-position" style="top:200px"></app-player>
+<app-player *ngFor="let player of game.players;let i=index;" class="player-position" 
+    [name]="player"
+    [ngStyle]="{'top.px': 100 + (i*150)}"
+    [playerActive]="i == game.currentPlayer"></app-player>
 <div class="field">
-    <div class="card-stack">
-
-        <img *ngFor="let c of [0,1,2,3,4]; let i = index;" [ngStyle]="{'right.px': i*5}"
-            src="../../assets/img/card-img/card_cover.png">
-
+    <div class="card-stack"> 
         <img *ngFor="let card of game.playedCard" src="../../assets/img/card-img/{{ card }}.png"
             class="played-card-stack">
-        
+
+        <img *ngFor="let c of [1,2,3,4];" [ngStyle]="{'right.px': c * 5}"
+            src="../../assets/img/card-img/card_cover.png">
+
         <img (click)="takeCard()" [class.pick-card]="pickCardAnimation" class="pick-card"
             src="../../assets/img/card-img/{{ currentCard }}.png" style="right: 25px">
+
         <img (click)="takeCard()" class="top-card" src="../../assets/img/card-img/card_cover.png" style="right: 25px">
-
-
-
     </div>
 </div>
+
+<button mat-fab color="primary" class="player-add" (click)="openDialog()">
+    <mat-icon>add</mat-icon>
+</button>
+
+<app-card-action [card]="currentCard" class="card-action-text"></app-card-action>
