--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -30,13 +30,13 @@
 }
 
 .pick-card {
-    z-index:5;
+    z-index: 5;
     animation: pick-card-animation 0.8s ease-in-out !important;
     transform: scale(1) translateX(180px) translateY(-250px) rotate(10deg);
 }
 
-.played-card-stack{
-    right:25px;
+.played-card-stack {
+    right: 25px;
     transform: scale(1) translateX(180px) translateY(-250px) rotate(10deg);
 }
 
@@ -58,7 +58,20 @@
     }
 }
 
-.player-position{
+.player-position {
     position: absolute;
-    right:0;
+    right: 0;
+}
+
+.player-add {
+    position: absolute;
+    right: 32px;
+    bottom: 32px;
+}
+
+.card-action-text{
+    position: absolute;
+    bottom: 32px;
+    left: 128px;
+    right: 128px;
 }
