--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,4 +1,4 @@
-.player{
+.player {
 
     background-color: aliceblue;
     border-top-left-radius: 10px;
@@ -7,14 +7,18 @@
     display: flex;
     align-items: center;
 
-    img{
-        width:80px;
-        height: 80px;
+    img {
+        width: 50px;
+        height: 50px;
         object-fit: cover;
     }
 
-    span{
+    span {
         font-size: 24px;
         margin-left: 16px;
     }
+}
+
+.player-active{
+    background-color: aqua !important;
 }
