--- a/src/app/card-action/card-action.component.html
+++ b/src/app/card-action/card-action.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>{{ title }}</mat-card-title>
+    <mat-card-title>{{ card ? title : 'Please pick a card'}}</mat-card-title>
   </mat-card-header>
-  <mat-card-content>{{ description }}</mat-card-content>
+  <mat-card-content>{{ card ? description: 'Please click on the stack to select your next card'}}</mat-card-content>
 </mat-card>
